[package]
name = "livescope"
version = "0.1.0"
edition = "2021"
description = "Real-time system performance art visualizer"
authors = ["LiveScope Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30"
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
colorgrad = "0.6"
